--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,13 @@
+:root{
+  --color-primary: #0077b6;
+}
+
 body{
   margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: black;
 }
