--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,3 +11,13 @@ a{
   text-decoration: none;
   color: black;
 }
+
+button{
+  padding: .5em 1em;
+}
+
+.section-header{
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
